tests/baselines/reference/parserContinueStatement1.d.errors.txt
==== tests/cases/compiler/parserContinueStatement1.d.ts (1 errors) ====
    continue;
    ~~~~~~~~
!!! parserContinueStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.